# os-deployment

./: .gitignore  Cargo.toml  run_client.sh
osd-client/: Cargo.toml
osd-client/src/: advertise.rs  device.rs  device_other.rs  device_windows.rs  main.rs
osd-core/: Cargo.toml
osd-core/src/: lib.rs
osd-server/: Cargo.toml
osd-server/src/: main.rs
