[package]
name = "osd-client"
version = "0.1.0"
edition = "2021"

[dependencies]
osd-core = { path = "../osd-core" }

nwd = { version = "1.0.5", package = "native-windows-derive" }
nwg = { version = "1.0.13", package = "native-windows-gui" }
wmi = "0.13.0"

serde = { workspace = true }
thiserror = { workspace = true }
